--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.1.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@hookform/resolvers": "^2.9.7",
+        "@prisma/client": "^5.17.0",
         "@supabase/ssr": "^0.4.0",
         "@supabase/supabase-js": "^2.44.3",
         "@vercel/analytics": "^1.3.1",
@@ -53,7 +54,7 @@
         "@types/cookie": "^0.6.0",
         "@types/cors": "^2.8.17",
         "@types/jsonwebtoken": "^9.0.6",
-        "@types/node": "^20.14.10",
+        "@types/node": "^20.14.12",
         "@types/nodemailer": "^6.4.15",
         "@types/react": "^18.3.3",
         "@types/three": "^0.166.0",
@@ -63,8 +64,10 @@
         "eslint-config-next": "^14.2.5",
         "postcss": "^8.4.14",
         "prettier": "2.7.1",
+        "prisma": "^5.17.0",
         "tailwind-scrollbar": "^1.3.1",
         "tailwindcss": "^3.1.7",
-        "typescript": "^5.5.3"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.5.4"
     }
 }
